# bookmark-cli

./: LICENSE  LICENSES.md  README.md  pyproject.toml
bookmarks/: __main__.py  app.py  clipper.py  config.py  vault.py
bookmarks_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
